--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,3 +24,5 @@ nav:
     - Heatmap e Tabela de Conhecimento:
         - Heatmap: heatmap_knowledge-table/heatmap.md
         - Tabela de Conhecimento: heatmap_knowledge-table/knowledge_table.md
+    - Plano e monitoramento:
+        - Arquitetura do projeto: documentos_de_projeto/arquitetura_do_projeto.md
