add_brainstorm_revisão_tecnica.md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,3 +33,6 @@ nav:
        - Visão do produto: lean_inception/visão_do_produto.md
        - É, Não É, Faz, Não Faz: lean_inception/É_Não_É_Faz_Não_Faz.md
        - Personas: lean_inception/Personas.md
+       - Jornada de Usuario: lean_inception/Jornada_de_usuario.md
+       - Brainstorming de Funcionalidades: lean_inception/Brainstorming_Funcionalidades.md
+       - Teste: lean_inception/Revisão_Técnica.md
