Add roadmap document
Co-authored-by: DaviMatheus <matdavimat@gmail.com>
Co-authored-by: GuilhermeBraz <gvcerveirabraz@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,29 +19,29 @@ nav:
     - Manuais de Uso:
           - CLI: manual-de-uso/cli.md
     - Guia de contribuicao:
-      - Como contribuir: guia_contribuicao/como_contribuir.md
-      - Política de Branches: guia_contribuicao/branches.md
-      - Política de Commits: guia_contribuicao/commits.md
-      - Código de conduta: guia_contribuicao/CODE_OF_CONDUCT.md
+          - Como contribuir: guia_contribuicao/como_contribuir.md
+          - Política de Branches: guia_contribuicao/branches.md
+          - Política de Commits: guia_contribuicao/commits.md
+          - Código de conduta: guia_contribuicao/CODE_OF_CONDUCT.md
     - Plano e monitoramento:
-      - Plano de custos: documentos_de_projeto/plano_de_custos.md
-      - Agenda e ferramentas: documentos_de_projeto/agenda_e_ferramentas.md
-      - Estrutura analítica do projeto: documentos_de_projeto/eap.md
+          - Plano de custos: documentos_de_projeto/plano_de_custos.md
+          - Agenda e ferramentas: documentos_de_projeto/agenda_e_ferramentas.md
+          - Estrutura analítica do projeto: documentos_de_projeto/eap.md
+          - Roadmap: documentos_de_projeto/roadmap.md
     - Heatmap e Tabela de Conhecimento:
-      - Heatmap: heatmap_knowledge_table/heatmap.md
-      - Tabela de Conhecimento: heatmap_knowledge_table/knowledge_table.md
+          - Heatmap: heatmap_knowledge_table/heatmap.md
+          - Tabela de Conhecimento: heatmap_knowledge_table/knowledge_table.md
     - Documentação:
-       - Arquitetura do projeto: documentos_de_projeto/arquitetura_do_projeto.md
-       - Planejamento de Gerenciamento de Riscos: documentos_de_projeto/plano_de_riscos.md
-    - Lean inception: 
-       - Introdução: lean_inception/Introducao.md
-       - Visão do produto: lean_inception/visao_do_produto.md
-       - É, Não É, Faz, Não Faz: lean_inception/E_Nao_E_Faz_Nao_Faz.md
-       - Personas: lean_inception/Personas.md
-       - Jornada de Usuario: lean_inception/Jornada_de_usuario.md
-       - Brainstorming de Funcionalidades: lean_inception/Brainstorming_Funcionalidades.md
-       - Revisão Técnica, de Negócio e de UX: lean_inception/Revisao_Tecnica.md
-       - Sequenciador: lean_inception/Sequenciador.md
-       - Canvas MVP: lean_inception/Canvas_MVP.md
-       - Mural: lean_inception/Mural.md
-
+          - Arquitetura do projeto: documentos_de_projeto/arquitetura_do_projeto.md
+          - Planejamento de Gerenciamento de Riscos: documentos_de_projeto/plano_de_riscos.md
+    - Lean inception:
+          - Introdução: lean_inception/Introducao.md
+          - Visão do produto: lean_inception/visao_do_produto.md
+          - É, Não É, Faz, Não Faz: lean_inception/E_Nao_E_Faz_Nao_Faz.md
+          - Personas: lean_inception/Personas.md
+          - Jornada de Usuario: lean_inception/Jornada_de_usuario.md
+          - Brainstorming de Funcionalidades: lean_inception/Brainstorming_Funcionalidades.md
+          - Revisão Técnica, de Negócio e de UX: lean_inception/Revisao_Tecnica.md
+          - Sequenciador: lean_inception/Sequenciador.md
+          - Canvas MVP: lean_inception/Canvas_MVP.md
+          - Mural: lean_inception/Mural.md
