--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,4 +46,10 @@ nav:
           - Canvas MVP: lean_inception/Canvas_MVP.md
           - Mural: lean_inception/Mural.md
     - Sprints:
+          - sprint_12.05:  semanas-sprints/sprints/sprint_12.05.md   
+          - Sprint_19.05:  semanas-sprints/sprints/sprint_19.05.md   
           - Sprint_29.05:  semanas-sprints/sprints/sprint_29.05.md   
+          - Sprint_05.06:  semanas-sprints/sprints/sprint_05.06.md   
+          - Sprint_12.06:  semanas-sprints/sprints/sprint_12.06.md   
+          - Sprint_19.06:  semanas-sprints/sprints/sprint_19.06.md   
+          - Sprint_26.06:  semanas-sprints/sprints/sprint_26.06.md   
